New extension files added to .gitignore for LaTeX.
New extension files added to .gitignore for LaTeX.

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,8 @@
 *.mtc
 *.mtc1
 *.out
+*.nav
+*.snm
 *.synctex.gz
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
